--- a/app/views/hosts/_netbox_tab.html.erb
+++ b/app/views/hosts/_netbox_tab.html.erb
@@ -1,5 +1,28 @@
-<% if @host.netbox_facet&.url %>
-  <%= link_to _('Open Netbox'), @host.netbox_facet&.url, class: 'btn btn-default', target: :_blank %>
-<% else %>
-  <%= alert text: _('This host has not been synchronized yet'), class: 'alert-warning' %>
-<% end %>
+<table id="netbox_table" class="<%= table_css_classes %>">
+  <tr>
+    <td><%= _('Last Synchronization') %></td>
+    <td><%= date_time_relative(@host.netbox_facet.synchronized_at) %></td>
+  </tr>
+  <tr>
+    <td><%= _('Status') %></td>
+    <td>
+      <% if @host.netbox_facet.synchronization_success? %>
+        <%= icon_text('ok', '', kind: 'pficon') %>
+        <%= content_tag(:span, _('OK'), class: 'status-ok') %>
+      <% else %>
+        <%= icon_text('error-circle-o', '', kind: 'pficon') %>
+        <%= content_tag(:span, @host.netbox_facet.synchronization_error, class: 'status-error') %>
+      <% end %>
+    </td>
+  </tr>
+  <tr>
+    <td><%= _('Link') %></td>
+    <td>
+      <% if @host.netbox_facet.url %>
+        <%= link_to(@host.netbox_facet.url, @host.netbox_facet.url, target: :_blank) %>
+      <% else %>
+        <%= content_tag(:span, _('No Netbox object is associated with this host'), class: 'status-warn') %>
+      <% end %>
+    </td>
+  </tr>
+</table>
